<?xml version="1.0" encoding="utf-8"?>
<resources>
   <!-- misc -->
   <string name="a_label">OLANdroid</string>
   <string name="a_help">Help</string>
   <string name="a_settings">Settings</string>
   <string name="a_accept">Accept</string>
   <string name="a_cancel">Cancel</string>
   <string name="a_new_flight_title">Enter a name for the flight</string>
   <string name="a_new_flight_title_invalid">Invalid name</string>
   <string name="a_new_flight_title_valid">Flight saved</string>
   <string name="a_first">Hey there</string>
   <string name="a_first_message">Welcome to OLANdroid &#8208; a tool for modelling the acrobatic
      flights of aircraft using the OLAN notation. There\&#39;s help available for the app using the
      question mark in the action bar.</string>
   <string name="a_unavailable">Unavailable</string>
   <string name="a_dismiss">Dismiss</string>
   <string name="a_about">About</string>

   <!-- about activity -->
   <string name="aa_label">About</string>
   <string name="aa_content">OLANdroid is a tool for helping develop an understanding of aerobatic
      flight through the interpretation and visualisation of them via the OLAN system (developed by
      Michael Golan).\r\n
      \r\n
      Credit for the Aresti diagrams goes to <a href="http://www.openaero.net">OpenAero</a>.\r\n
      \r\n
      Developed by <a href="http://www.gideonjon.es">Gideon MW Jones</a> while at <a
         href="http://www.aber.ac.uk">Aberystwyth University</a>.
   </string>

   <!-- flight manager activity -->
   <string name="fma_new">New flight</string>
   <string name="fma_c_load">Load</string>
   <string name="fma_c_edit">Edit</string>
   <string name="fma_c_rename">Rename</string>
   <string name="fma_c_delete">Delete</string>
   <string name="fma_help">Browse flights &#38; load them by tapping on them, with a long press for
      additional operations. Build a new flight by tapping the plus in the action bar.</string>

   <!-- build flight activity -->
   <string name="bfa_label">Build flight</string>
   <string name="bfa_button_vis">Build flight</string>
   <string name="bfa_button_plus">+</string>
   <string name="bfa_button_backtick">`</string>
   <string name="bfa_hint_olan">Enter an OLAN string</string>
   <string name="bfa_clear_olan">Clear</string>
   <string name="bfa_toast_invalid">Invalid OLAN</string>
   <string name="bfa_toast_corrected">Flight autocorrected</string>
   <string name="bfa_help">Build a flight using an OLAN string. Browse manoeuvres in the
      catalogue below &#38; tap to add them to the current flight (long tap to see their Aresti
      diagrams), or type them directly into the text box. \r\nSome OLAN figures support modifiers
      &#38; can have &#8216;+/`&#8217; before &#38;/or after them to extend their entry &#38; exit
      paths/scale parts of the manoeuvre. Manoeuvres can be fully scaled by preceding them with a
      &#8216;2%&#8217; for example to scale it.
   </string>
   <string name="bfa_aresti">Aresti diagram</string>

   <!-- visualisation activity -->
   <string name="va_label">&#160;</string>
   <string name="va_play">Play</string>
   <string name="va_stop">Stop</string>
   <string name="va_edit">Edit</string>
   <string name="va_save">Save</string>
   <string name="va_help">(One or two finger) tap &#38; drag to rotate around the flight. Pinch to
      zoom in &#38; out. Use the play/pause button on the action bar to play &#38; pause the
      animation, the progress bar at the bottom can be used to step through its progress too. The
      control scheme &#38; animation speed can changed in the settings menu.
   </string>

   <!-- preferences -->
   <string name="p_label">Preferences</string>
   <string name="p_category_flight">Flight</string>
   <string name="p_category_visualisation">Visualisation</string>
   <string name="p_autocorrect_title">OLAN autocorrect</string>
   <string name="p_autocorrect_summary">Whether or not to correct the OLAN for height</string>
   <string name="p_ground_style_title">Ground style</string>
   <string name="p_ground_style_summary">What the reference plane looks like</string>
   <string name="p_colour_theme_title">Colour theme</string>
   <string name="p_colour_theme_summary">Colour scheme for the visualisation</string>
   <string name="p_animation_speed_title">Animation speed</string>
   <string name="p_animation_speed_summary">How fast the animation plays</string>
   <string name="p_animation_style_title">Animation style</string>
   <string name="p_animation_style_summary">The way the animation looks</string>
   <string name="p_control_scheme_title">Control schemes</string>
   <string name="p_control_scheme_summary">How to interact with the visualisation</string>
   <string name="title_activity_about">AboutActivity</string>

   <string name="hello_world">Hello world!</string>
   <string name="action_settings">Settings</string>
</resources>
