<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">

   <PreferenceCategory
      android:title="@string/p_category_visualisation">

      <ListPreference
         android:key="p_colour_theme"
         android:title="@string/p_colour_theme_title"
         android:summary="@string/p_colour_theme_summary"
         android:entries="@array/p_colour_theme_titles"
         android:entryValues="@array/p_colour_theme_values"
         android:defaultValue="0" />

      <ListPreference
         android:key="p_control_scheme"
         android:title="@string/p_control_scheme_title"
         android:summary="@string/p_control_scheme_summary"
         android:entries="@array/p_control_scheme_titles"
         android:entryValues="@array/p_control_scheme_values"
         android:defaultValue="0" />

      <ListPreference
         android:key="p_animation_speed"
         android:title="@string/p_animation_speed_title"
         android:summary="@string/p_animation_speed_summary"
         android:entries="@array/p_animation_speed_titles"
         android:entryValues="@array/p_animation_speed_values"
         android:defaultValue="1" />

      <ListPreference
         android:key="p_animation_style"
         android:title="@string/p_animation_style_title"
         android:summary="@string/p_animation_style_summary"
         android:entries="@array/p_animation_style_titles"
         android:entryValues="@array/p_animation_style_values"
         android:defaultValue="0" />
   </PreferenceCategory>
</PreferenceScreen>
