<menu
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="uk.ac.aber.gij2.mmp.ui.VisualisationActivity">

   <item
      android:id="@+id/menu_va_play"
      android:title="@string/va_play"
      android:icon="@drawable/ic_action_play"
      app:showAsAction="ifRoom" />

   <item
      android:id="@+id/menu_va_edit"
      android:title="@string/va_edit"
      android:icon="@drawable/ic_action_edit"
      app:showAsAction="ifRoom" />

   <item
      android:id="@+id/menu_va_save"
      android:title="@string/va_save"
      android:icon="@drawable/ic_action_save"
      app:showAsAction="ifRoom" />

   <item
      android:id="@+id/menu_a_help"
      android:title="@string/a_help"
      android:icon="@drawable/ic_action_help"
      app:showAsAction="ifRoom" />

   <item
      android:id="@+id/menu_a_settings"
      android:title="@string/a_settings"
      android:icon="@drawable/ic_action_overflow"
      android:orderInCategory="100"
      app:showAsAction="ifRoom" />
</menu>
