<?xml version="1.0" encoding="utf-8"?>
<menu
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="uk.ac.aber.gij2.olandroid.ui.FlightManagerActivity">

   <item
      android:id="@+id/menu_fma_new"
      android:title="@string/fma_new"
      android:icon="@drawable/ic_action_new"
      app:showAsAction="always" />

   <item
      android:id="@+id/menu_a_help"
      android:title="@string/a_help"
      android:icon="@drawable/ic_action_help"
      app:showAsAction="ifRoom" />

   <item
      android:id="@+id/menu_a_settings"
      android:title="@string/a_settings"
      android:icon="@drawable/ic_action_settings"
      android:orderInCategory="100"
      app:showAsAction="ifRoom" />
</menu>
