<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="uk.ac.aber.gij2.olandroid.ui.BuildFlightActivity"

   android:orientation="vertical"
   android:paddingLeft="@dimen/a_margin_horizontal"
   android:paddingRight="@dimen/a_margin_horizontal"
   android:paddingTop="@dimen/a_margin_vertical"
   android:paddingBottom="@dimen/a_margin_vertical"

   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:layout_toRightOf="@+id/bfa_intro_title"
   android:layout_toEndOf="@+id/bfa_intro_title"
   android:layout_alignParentTop="true">

   <EditText
      android:id="@+id/bfa_edittext_olan"
      android:hint="@string/bfa_hint_olan"
      android:inputType="textNoSuggestions"

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal" />

   <LinearLayout
      android:orientation="horizontal"
      android:weightSum="100"

      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <Button
         android:id="@+id/bfa_button_vis"
         android:text="@string/bfa_button_vis"
         android:onClick="button_vis"

         android:layout_width="0dp"
         android:layout_weight="70"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />

      <Button
         android:id="@+id/bfa_button_plus"
         android:text="@string/bfa_button_plus"
         android:onClick="button_plus"

         android:layout_width="0dp"
         android:layout_weight="15"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />

      <Button
         android:id="@+id/bfa_button_backtick"
         android:text="@string/bfa_button_backtick"
         android:onClick="button_backtick"

         android:layout_width="0dp"
         android:layout_weight="15"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal" />
   </LinearLayout>

   <Spinner
      android:id="@+id/bfa_spinner_category"

      android:padding="10dp"

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal" />

   <ListView
      android:id="@+id/bfa_list_manoeuvres"

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"/>
</LinearLayout>
